<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blips</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="toggle">Toggle Sound</string>
    <string name="button_save">Save</string>
    <string name="button_loadsave">Load / Save</string>
    <string name="button_clear">Clear All</string>
    <string name="save_edittext">Enter filename to save       </string>
    <string name="button_load">Load</string>
    <string name="button_delete">Del</string>
    <string name="filename_placeholder">filename</string>
    <string name="scale_mixolydian">Mixolydian</string>
    <string name="scale_ionian">Ionian (Major)</string>
    <string name="scale_dorian">Dorian</string>
    <string name="scale_phrygian">Phrygian</string>
    <string name="scale_lydian">Lydian</string>
    <string name="scale_locrian">Locrian</string>
    <string name="scale_aeolian">Aeolian (Minor)</string>
    <string name="scale_harmonic">Harmonic Minor</string>
    <string name="root_c">C</string>
    <string name="root_db">D\u266D</string>
    <string name="root_d">D</string>
    <string name="root_eb">E\u266D</string>
    <string name="root_e">E</string>
    <string name="root_f">F</string>
    <string name="root_gb">G\u266D</string>
    <string name="root_g">G</string>
    <string name="root_ab">A\u266D</string>
    <string name="root_a">A</string>
    <string name="root_bb">B\u266D</string>
    <string name="root_b">B</string>
    <string name="saveload_menu">Load/Save</string>
    <string name="tempotext">Tempo</string>
    <string name="swingtext">Swing Level</string>
    <string name="instrument_menu_text">Inst</string>
    <string name="trumpet">Trumpet</string>
    <string name="cello">Cello</string>
    <string name="guitar">Guitar</string>
    <string name="piano">Piano</string>
    <string name="clarinet">Clarinet</string>
    <string name="trombone">Trombone</string>
    <string name="tuba">Tuba</string>
    <string name="flute">Flute</string>
    <string name="sax">Saxophone</string>
    <string name="noFiles_text">You have no saved Blips</string>
    <string name="howToLoad_text">Tap a Blip\'s name to load</string>
    
</resources>
